# dynamic_stone_proto_translator

./: Cargo.toml
src/: fixture.descriptor  fixture.proto  fixture.rs  main.rs
