[package]
name = "dynamic_stone_proto_translator"
version = "0.1.0"
authors = ["Connor Worley <cworley@dropbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { git = "https://github.com/stepancheg/rust-protobuf", rev = "b447f53014af46a7faf6bf46d313391a61b2eace" }